--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22"
   }
